손목 랜드마크만 서버에 보내도록 수정

--- a/PoseDataClient/hand_webcom.ipynb
+++ b/PoseDataClient/hand_webcom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,9 +64,10 @@
     "                        mp_drawing.DrawingSpec(color=(121, 22, 76), thickness=2, circle_radius=4),\n",
     "                        mp_drawing.DrawingSpec(color=(250, 44, 250), thickness=2))\n",
     "                    \n",
-    "                    # 손의 랜드마크를 문자열로 변환하여 서버로 전송\n",
-    "                    hand_landmarks_str = ';'.join([f\"{lm.x},{lm.y},{lm.z}\" for lm in hand_landmarks.landmark])\n",
-    "                    client_socket.sendall(hand_landmarks_str.encode())\n",
+    "                    # 손목 랜드마크를 문자열로 변환하여 서버로 전송\n",
+    "                    wrist_landmark = hand_landmarks.landmark[mp_hands.HandLandmark.WRIST]\n",
+    "                    wrist_landmark_str = f\"{wrist_landmark.x},{wrist_landmark.y},{wrist_landmark.z}\"\n",
+    "                    client_socket.sendall(wrist_landmark_str.encode())\n",
     "\n",
     "            # 결과 이미지 표시\n",
     "            cv2.imshow('Hand Tracking', image)\n",
