--- a/PoseDataClient/hand_webcom.ipynb
+++ b/PoseDataClient/hand_webcom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -64,10 +64,18 @@
     "                        mp_drawing.DrawingSpec(color=(121, 22, 76), thickness=2, circle_radius=4),\n",
     "                        mp_drawing.DrawingSpec(color=(250, 44, 250), thickness=2))\n",
     "                    \n",
-    "                    # 손목 랜드마크를 문자열로 변환하여 서버로 전송\n",
+    "                    # 엄지 끝점 랜드마크 가져오기\n",
+    "                    thumb_tip = hand_landmarks.landmark[mp_hands.HandLandmark.THUMB_TIP]\n",
+    "                    # 검지 끝점 랜드마크 가져오기\n",
+    "                    index_tip = hand_landmarks.landmark[mp_hands.HandLandmark.INDEX_FINGER_TIP]\n",
+    "                    # 손목 랜드마크 가져오기\n",
     "                    wrist_landmark = hand_landmarks.landmark[mp_hands.HandLandmark.WRIST]\n",
-    "                    wrist_landmark_str = f\"{wrist_landmark.x},{wrist_landmark.y},{wrist_landmark.z}\"\n",
-    "                    client_socket.sendall(wrist_landmark_str.encode())\n",
+    "                    \n",
+    "                    # 랜드마크들의 좌표 값을 소수점 셋째 자리까지 반올림하여 문자열로 변환하여 서버로 전송\n",
+    "                    landmarks_str = f\"{round(thumb_tip.x, 3)},{round(thumb_tip.y, 3)},{round(thumb_tip.z, 3)};\" \\\n",
+    "                                    f\"{round(index_tip.x, 3)},{round(index_tip.y, 3)},{round(index_tip.z, 3)};\" \\\n",
+    "                                    f\"{round(wrist_landmark.x, 3)},{round(wrist_landmark.y, 3)},{round(wrist_landmark.z, 3)}\"\n",
+    "                    client_socket.sendall(landmarks_str.encode())\n",
     "\n",
     "            # 결과 이미지 표시\n",
     "            cv2.imshow('Hand Tracking', image)\n",
